Attempt to fix mobile rendering of packshot (too wide)

--- a/_custom/sparklite.less
+++ b/_custom/sparklite.less
@@ -516,7 +516,6 @@ p {
   margin: 1vw 2vw 2vw 2vw;
   width: 40vw;
   max-width: 800px;
-  min-width: 400px;
   border-radius: 6px;
   border: 2px solid @color-dark-brown;
 }
